@@ -38,9 +38,16 @@ modules 3.3.0
 
 ****************************   Release 3.2 ******************************
 Modules 3.2.10
+	* Fixed the module switch with custom delimiters (Tyson Whitehead)
+	* If a bash shell check if interactive or not for alias/functions
+	* Fix the flags with regards to recursive load/unload
+	* Fix perl.pm init file typo (bug 3497092)
+	* Moved from cvs to git
 	* Fix the module swap with the --delim option (Tyson Whitehead)
 	* Increased the "update" buffer (Leon Kos)
 	* Use the locale for sorting modulefiles by the avail command
+	* Fixed the segfault problem with Tcl_RegExpCompile() (Kenneth Hoste,
+	  Tyson Whitehead)
 
 Modules 3.2.9
 Nov 24, 2011				R.K. Owen (rk@owen.sj.ca.us)
